--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css-practice/css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
@@ -8,11 +9,14 @@
 <body>
     <main>
     <h1>Odin Recipes</h1>
+    <img  class="box" src="https://athome.starbucks.com/sites/default/files/styles/homepage_banner_xlarge/public/2021-05/IcedLatte_Hdr_2880x1660.jpg.webp?itok=gNCJksW_"  alt="pouring latte">
+    <div id="lists" class="box">
     <ul>
-    <li><a href="recipes/latte.html">Latte Recipe</a></li>
-    <li><a href="recipes/matcha.html">Matcha Recipe</a></li>
-    <li><a href="recipes/coldbrew.html">Cold Brew Recipe</a></li>
+    <li class="recipe" ><a href="recipes/latte.html">Latte Recipe</a></li>
+    <li class="recipe"><a href="recipes/matcha.html">Matcha Recipe</a></li>
+    <li class="recipe"><a href="recipes/coldbrew.html">Cold Brew Recipe</a></li>
     </ul>
+    </div>
 </main>
 </body>
 </html>
