--- a/recipes/coldbrew.html
+++ b/recipes/coldbrew.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css-practice/css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    <header class="header-3">
     <h1>Cold Brew Recipe</h1>
+    </header>
     <h2>How to make cold brew coffee at home!</h2>
     <img src="https://www.simplyrecipes.com/thmb/t9ZeQC3Nb2YUoQTnxUJrjJbnKEA=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/Simply-Recipes-Cold-Brew-Coffee-LEAD-16-428691bcdd594281b2f5dc6dbc8235e4.jpg" alt="cold brew coffee">
     <p>You may have consumed cold brewed coffee at a nearby cafe or purchased it in ready-to-go containers at the store for ultimate convenience. Yet, once you discover how effortlessly you can draft it at home, you'll ponder why you haven't been brewing it yourself all this time.</p>
